# simulation

./: .gitignore  execute_manual_airbot.txt  execute_manual_turtlebot3.txt
namuhx-a1-simulator/: index.html  package-lock.json  package.json  vite.config.js
namuhx-a1-simulator/archive/: A1_simul_1안.html  A1_simul_2안.html  A1_simul_demo.html  A1_simul_기존.html
namuhx-a1-simulator/src/: RobotModel.js  RobotSimulator.js  SensorAnalysis.js  SensorVisualizer.js  main.js
namuhx-a1-simulator/src/styles/: style.css
namuhx-a1-simulator/src/utils/: analysis.js
src/everybot/everybot/: CHANGELOG.rst  CMakeLists.txt  package.xml
src/everybot/everybot_bringup/: CMakeLists.txt  package.xml
src/everybot/everybot_bringup/launch/: everybot_state_publisher.launch.py  robot.launch.py  rviz2.launch.py
src/everybot/everybot_bringup/param/: airbot.yaml
src/everybot/everybot_cartographer/: CMakeLists.txt  package.xml
src/everybot/everybot_cartographer/launch/: cartographer.launch.py
src/everybot/everybot_description/: CMakeLists.txt  package.xml
src/everybot/everybot_description/urdf/: everybot_airbot.urdf
src/everybot/everybot_example/: package.xml  setup.cfg  setup.py
src/everybot/everybot_example/everybot_example/everybot_obstacle_detection/: everybot_obstacle_detection.py  main.py
src/everybot/everybot_example/everybot_example/everybot_patrol_client/: everybot_patrol_client.py  main.py
src/everybot/everybot_example/everybot_example/everybot_patrol_server/: everybot_path.py  everybot_patrol_server.py  main.py
src/everybot/everybot_example/everybot_example/everybot_position_control/: everybot_path.py  everybot_position_control.py  main.py
src/everybot/everybot_navigation2/: CMakeLists.txt  package.xml
src/everybot/everybot_navigation2/launch/: navigation2.launch.py
src/everybot/everybot_navigation2/param/: airbot.yaml
src/everybot/everybot_node/: CMakeLists.txt  package.xml
src/everybot/everybot_node/include/everybot_node/: control_table.hpp  diff_drive_controller.hpp  dynamixel_sdk_wrapper.hpp  everybot.hpp  odometry.hpp
src/everybot/everybot_node/include/everybot_node/devices/: devices.hpp  motor_power.hpp  reset.hpp  sound.hpp
src/everybot/everybot_node/include/everybot_node/sensors/: battery_state.hpp  imu.hpp  joint_state.hpp  sensor_state.hpp  sensors.hpp
src/everybot/everybot_node/param/: airbot.yaml
src/everybot/everybot_node/src/: diff_drive_controller.cpp  dynamixel_sdk_wrapper.cpp  everybot.cpp  node_main.cpp  odometry.cpp
src/everybot/everybot_node/src/devices/: motor_power.cpp  reset.cpp  sound.cpp
src/everybot/everybot_node/src/sensors/: battery_state.cpp  imu.cpp  joint_state.cpp  sensor_state.cpp
src/everybot/everybot_teleop/: package.xml  setup.cfg  setup.py
src/everybot/everybot_teleop/everybot_teleop/script/: teleop_keyboard.py
src/everybot_msgs/: CMakeLists.txt  package.xml
src/everybot_msgs/msg/: VersionInfo.msg
src/everybot_simulations/everybot_gazebo/: CMakeLists.txt  package.xml
src/everybot_simulations/everybot_gazebo/include/everybot_gazebo/: everybot_drive.hpp
src/everybot_simulations/everybot_gazebo/launch/: empty_world.launch.py  everybot_dqn_stage1.launch.py  everybot_dqn_stage2.launch.py  everybot_dqn_stage3.launch.py  everybot_dqn_stage4.launch.py  everybot_house.launch.py  everybot_world.launch.py  robot_state_publisher.launch.py  spawn_everybot.launch.py
src/everybot_simulations/everybot_gazebo/models/everybot_airbot/: model-1_4.sdf  model.config  model.sdf
src/everybot_simulations/everybot_gazebo/models/everybot_common/: model.config
src/everybot_simulations/everybot_gazebo/models/everybot_common/meshes/: airbot_base.dae
src/everybot_simulations/everybot_gazebo/models/everybot_dqn_world/: model.config  model.sdf
src/everybot_simulations/everybot_gazebo/models/everybot_house/: model.config  model.sdf
src/everybot_simulations/everybot_gazebo/models/everybot_world/: model-1_4.sdf  model.config  model.sdf
src/everybot_simulations/everybot_gazebo/src/: everybot_drive.cpp
src/everybot_simulations/everybot_gazebo/worlds/: everybot_dqn_stage1.world  everybot_dqn_stage2.world  everybot_dqn_stage3.world  everybot_dqn_stage4.world  everybot_house.world  everybot_world.world
src/everybot_simulations/everybot_simulations/: CMakeLists.txt  package.xml
(+4 files in other folders)
