<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>everybot</name>
  <version>2.1.5</version>
  <description>
    ROS 2 packages for Everybot
  </description>
  <maintainer email="hyjoe@everybot.net">Hwanyeong Joe</maintainer>
  <license>Apache 2.0</license>
  <author email="hyjoe@everybot.net">Darby Lim</author>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>everybot_bringup</exec_depend>
  <exec_depend>everybot_description</exec_depend>
  <!-- <exec_depend>everybot_cartographer</exec_depend> -->
  <!-- <exec_depend>everybot_example</exec_depend> -->
  <!-- <exec_depend>everybot_navigation2</exec_depend> -->
  <!-- <exec_depend>everybot_node</exec_depend> -->
  <!-- <exec_depend>everybot_teleop</exec_depend> -->
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
