<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>everybot_description</name>
  <version>2.1.5</version>
  <description>
    3D models of the Everybot for simulation and visualization
  </description>
  <maintainer email="hyjoe@everybot.net">Hwanyeong Joe</maintainer>
  <license>Apache 2.0</license>
  <author email="hyjoe@everybot.net">Darby Lim</author>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>urdf</depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
