<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>everybot_example</name>
  <version>2.1.5</version>
  <description>
    This package provides four basic examples for Everybot (i.e., interactive marker, object detection, patrol and position control).
  </description>
  <maintainer email="hyjoe@everybot.net">Hwanyeong Joe</maintainer>
  <license>Apache 2.0</license>
  <author email="hyjoe@everybot.net">Hwanyeong Joe</author>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>everybot_msgs</depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
